...
          tabBarButtonTestID: "tab-map",
        }}
      />
      <Tabs.Screen
        name="calendar"
        options={{
          title: "Calendar",
          tabBarIcon: CalendarTabIcon,
          tabBarButtonTestID: "tab-calendar",
        }}
      />
    </Tabs>
  );
}

