...
    );
  }

  if (isLoggedIn) {
    return (
      <GestureDetector gesture={Gesture.Race(swipeLeftGesture, swipeRightGesture)}>
        <View style={{ flex: 1 }} testID="courses-view">
          <Button title="Logout" onPress={() => logout()} />
          <ScheduleViewer data={sortedCalendarData} date={date} setDate={setDate} />
        </View>
      </GestureDetector>
    );
  }
...
