...
        label: roomContext ? "Directions to Room" : "Directions",
        icon: "navigate-outline",
        type: "directions",
        handler: onNavigate,
      },
      {
        label: "Set Start",
        icon: "flag-outline",
        type: "start",
        handler: onSetAsStart,
      },
      {
        label: roomContext ? "Open Indoor Map" : "Explore Rooms",
...
    theme,
    todayIdx,
    styles.headerText,
  ]);

  return (
    <InfoPopup shouldDisplay={!!building} header={header} testID="building-info-popup">
      {(building?.accessibility?.length || 0) > 0 && (
        <>
          <Text style={styles.sectionTitle}>Accessibility</Text>
          {building?.accessibility.map((item) => (
            <ListItem key={item} text={formatCamelCase(item)} theme={theme} />
          ))}
...
