...
    );

  return (
    <InfoPopup
      shouldDisplay={isOpen}
      header={header}
      testID="routes-info-popup"
      renderChildrenWhenCollapsed={true}
    >
      {selectedRoute ? (
        <>
          <TouchableOpacity
            style={styles.backButton}
...
