import { Coordinate, CoordinateDelta, Region } from "@/types/mapTypes";
import React, { useEffect } from "react";
import { View, StyleSheet } from "react-native";
import SwitchSelector from "react-native-switch-selector";
import MapView from "react-native-maps";
import { useColorScheme } from "@/hooks/use-color-scheme";
import { Colors } from "@/constants/theme";
import { SGW_CENTER, LOY_CENTER } from "@/constants/campusCenters";

interface Props {
  mapRef: React.RefObject<MapView | null>;
  viewRegion: Region;
  setCurrCampus: React.Dispatch<React.SetStateAction<"SGW" | "LOY">>;
}

enum Campus {
  Loyola = 0,
  SGW = 1,
}

const DEFAULT_ZOOM: CoordinateDelta = {
  latitudeDelta: 0.01,
  longitudeDelta: 0.01,
};

export default function CampusToggle({
  mapRef,
  viewRegion,
  setCurrCampus,
}: Readonly<Props>) {
  const colorScheme = useColorScheme();
  const [switchValue, setSwitchValue] = React.useState<number>(() => {
    let sgwDistance = Math.hypot(
      viewRegion.latitude - SGW_CENTER.latitude,
      viewRegion.longitude - SGW_CENTER.longitude,
    );
    let loyDistance = Math.hypot(
      viewRegion.latitude - LOY_CENTER.latitude,
      viewRegion.longitude - LOY_CENTER.longitude,
    );
    return sgwDistance < loyDistance ? Campus.SGW : Campus.Loyola;
  });

  useEffect(() => {
    let sgwDistance = Math.hypot(
      viewRegion.latitude - SGW_CENTER.latitude,
      viewRegion.longitude - SGW_CENTER.longitude,
    );
    let loyDistance = Math.hypot(
      viewRegion.latitude - LOY_CENTER.latitude,
      viewRegion.longitude - LOY_CENTER.longitude,
    );
    let newSwitchValue = sgwDistance < loyDistance ? Campus.SGW : Campus.Loyola;

    setCurrCampus(newSwitchValue === Campus.SGW ? "SGW" : "LOY");

    setSwitchValue((prev) => (prev === newSwitchValue ? prev : newSwitchValue));
  }, [viewRegion, setCurrCampus]);

  const focusCampusOnPress = (value: number) => {
    let newFocus: Coordinate = value === Campus.SGW ? SGW_CENTER : LOY_CENTER;

    setSwitchValue(value);
    setCurrCampus(value === Campus.SGW ? "SGW" : "LOY");

    mapRef.current?.animateToRegion({
      ...newFocus,
      ...DEFAULT_ZOOM,
    });
  };

  return (
    <View style={styles.container}>
      <SwitchSelector
        initial={switchValue === Campus.Loyola ? Campus.Loyola : Campus.SGW}
        value={switchValue}
        textColor={Colors[colorScheme].campusToggle.textColor}
        selectedColor={Colors[colorScheme].campusToggle.selectedColor}
        buttonColor={Colors[colorScheme].campusToggle.buttonColor}
        borderColor={Colors[colorScheme].campusToggle.borderColor}
        backgroundColor={Colors[colorScheme].campusToggle.backgroundColor}
        disableValueChangeOnPress={false}
        bold={true}
        fontSize={20}
        borderRadius={10}
        hasPadding
        options={[
          { label: "LOY", value: Campus.Loyola },
          { label: "SGW", value: Campus.SGW },
        ]}
        testID="campus-toggle-selector"
        accessibilityLabel="campus-toggle-selector"
        onPress={focusCampusOnPress}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    alignItems: "center",
    width: "80%",
    maxWidth: 100,
    borderRadius: 30,
    top: "90%",
    left: "2%",
    backgroundColor: "transparent",
    position: "absolute",
    zIndex: 5,
  },
});
