...
    }
  }, [poi?.international_phone_number]);

  const ACTIONS: Action[] = useMemo(
    () => [
      {
        label: "Directions",
        icon: "navigate-outline",
        type: "directions",
        handler: onNavigate,
        active: !!onNavigate,
      },
      {
...
