appId: host.exp.Exponent
---
- runFlow:
    when:
      notVisible:
        id: "building-selection"
    file: ../openLink.yaml
- assertVisible: "LOY"
- assertVisible: "SGW"
- assertVisible:
    id: "campus-toggle-selector"
- tapOn: "SGW"
- assertVisible:
    text: "SGW"
    enabled: true
- assertVisible:
    text: "LOY"
    selected: false
- assertVisible:
    id: "marker-FB"
- tapOn: "LOY"
- assertVisible:
    text: "LOY"
    enabled: true
- assertVisible:
    text: "SGW"
    selected: false
- assertVisible:
    id: "marker-GE"
- tapOn: "SGW"
- assertVisible:
    text: "SGW"
    enabled: true
- assertVisible:
    text: "LOY"
    selected: false
- assertVisible:
    id: "marker-FB"
