appId: host.exp.Exponent
---
- openLink: exp://192.168.0.110:8081
- assertVisible: "Loyola"
- assertVisible: "SGW"
- assertVisible:
    id: "campus-toggle-selector"
- tapOn: "SGW"
- waitForAnimationToEnd:
    timeout: 2000
- assertVisible:
    id: "building-selection"