appId: host.exp.Exponent
---
- openLink: exp://192.168.0.110:8081
- assertVisible: "Loyola"
- assertVisible: "SGW"
- tapOn:
    id: "locationButton"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: "Only this time"
- setLocation:
    latitude: 45.4957849
    longitude: -73.577225

- waitForAnimationToEnd:
    timeout: 2000
